Support Java 11 for testing