@@ -81,11 +81,16 @@ task unzipKit(type: Copy) {
 test {
   dependsOn unzipKit
 
-  if (testJava.javaVersion.isJava9Compatible()) throw new StopExecutionException("OSGi Tests Not Working in Java 9")
-
-  environment 'JAVA_HOME', testJava.javaHome
+  if (testJava.javaVersion.isJava9Compatible()) {
+    //Deploying the jaxb-runtime as an OSGi module is currently impossible - don't ask... sigh.
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+    //Servers need JAXB too.
+    jvmArgs += ['-Dtc-server-opts=--add-modules java.xml.bind']
+  }
   systemProperty 'kitInstallationPath', "$unzipKit.destinationDir/${project(':clustered:clustered-dist').archivesBaseName}-$project.version-kit"
 }.doFirst {
+  if (testJava.javaVersion.isJava11Compatible()) throw new StopExecutionException("OSGi Tests Not Working in Java 11")
+
   configurations.osgiModule.resolvedConfiguration.resolvedArtifacts.forEach({
     systemProperty "$it.moduleVersion.id.module:osgi-path", it.file
   })
