@@ -35,9 +35,3 @@ dependencies {
   testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
   testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
-}
