@@ -27,15 +27,11 @@ dependencies {
   api project(':api')
   implementation project(':core')
   implementation project(':impl')
+  implementation "org.glassfish.jaxb:jaxb-runtime:$parent.jaxbVersion"
+
   testImplementation 'org.xmlunit:xmlunit-core:2.6.0', 'org.xmlunit:xmlunit-matchers:2.6.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-fluent-api:3.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
 }
 
 jar {
